# acidwatch

./: .envrc  .gitignore  CONTRIBUTING.md  README.md  devenv.nix  docker-compose.yml  mkdocs.yaml  package-lock.json  package.json  pyproject.toml  radixconfig.yaml  run.py
.devcontainer/: DockerFile  Dockerfile  devcontainer.json  install-dependencies.sh
.github/workflows/: Black.yml  Vitest.yml  docs.yml  javascript.yaml  node.js.yml  prettier.yaml  publish-pypi.yaml  python-packages.yaml  python-pgsql.yaml  python.yaml
backend/: .env.example  Dockerfile  Dockerfile.local  ca-bundle.trust.crt  docker-compose.yml  entrypoint  model.py  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01aaa143d690_refactor_simulation_to_use_model_inputs_.py  60afa15c63a4_added_model_version_to_simulation.py  7c2e1f4b8a90_drop_pickle_exception.py  7c2e9a4b1f3d_separate_conditions.py  95cea2f880b2_add_adapter_version.py  9b4e2c1a7d50_add_conditions_to_simulation.py  a3f8b2c91d40_add_unique_constraint_on_results_model_.py  a7f3c9d21b84_add_sweeps.py  add_parent_simulation_id.py  add_system_table.py  b5d2e3f14a70_replace_concentrations_with_phases.py  c35588effcc4_initial_schema.py  f5f2ea4c7d48_initial_setup.py
backend/infrastructure/: README.rd  appinsight.bicep  database.bicep  main.bicep
backend/src/acidwatch_api/: __main__.py  _legacy.py  app.py  authentication.py  configuration.py  database.py  db_client.py  error_handler.py  local_db.py  project_endpoints.py  settings.py
backend/src/acidwatch_api/database/: __init__.py  depends.py  schema.py
backend/src/acidwatch_api/models/: __init__.py  arcs.py  arcs_exp.py  base.py  co2spec.py  datamodel.py  dummy.py  example_adapter.py  gibbs_minimization_model.py  load.py  model_config.py  phpitz.py  phpitz_reactive.py  phpitz_solubility.py  project_data_model.py  reaktoro.py  solubility.py  solubilityccs.py  tocomo.py
backend/src/acidwatch_api/routes/: __init__.py  grid_simulations.py  models.py  oasis.py  sweeps.py
backend/tests/: conftest.py  data.json  test_for_black_lint.py  test_grid_simulations_endpoint.py  test_models_endpoints.py  test_projects.py  test_schema_guardrails.py  test_simulation_chain.py  test_sweeps_endpoint.py
backend/tests/migrations/: test_add_conditions.py  test_add_model_inputs.py
backend/tests/models/: test_adapter.py  test_all_adapters.py  test_gibbs_adapter.py  test_passthrough.py
backend/tests/routes/: conftest.py  test_models.py
backend/tools/: delete_from_oasis.py  migrate_data.py  run_arcs_from_experiments.py  upload_oasis.py  upload_results.py
docs/: index.md
docs/adr/: june_2025.md
docs/client/reference/: client.md
docs/reference/: adapter.md
examples/: acidwatch_api.ipynb
frontend/: .env.example  Dockerfile  Dockerfile.local  README.md  docker-compose.yml  env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/nginx-conf/: injectEnvVars.sh  nginx.conf  removeNoIndex.sh
frontend/src/: App.css  App.tsx  configuration.ts  index.css  inject-env-template.js  main.tsx
frontend/src/api/: api.ts  api.tsx
frontend/src/assets/: morland2019acid.ts  openKDCResults.tsx  openPublicationsResults.ts  syntheticLabResults.tsx  syntheticResults.tsx
frontend/src/components/: BarChart.tsx  BatchInput.tsx  CenteredImage.tsx  ConcResultPlot.tsx  ConcResultTable.tsx  ConcentrationTable.tsx  ConvertibleTextField.tsx  CreateProjectDialog.tsx  CreateProjectPrompt.tsx  DownloadButton.tsx  DynamicBreadcrumbs.tsx  ErrorBoundary.tsx  ErrorDialog.tsx  GenericTable.tsx  InputFields.tsx  InputSettings.tsx  LabResultSimulationRunsStatus.tsx  LabResultsPlot.tsx  LabResultsTable.tsx  LineChart.tsx  MassBalanceError.tsx  ModelAccordionLayout.tsx  ModelDescription.tsx  ModelInputs.tsx  ModelSelect.tsx  ParityPlots.tsx  Plot.tsx  ProjectSelector.tsx  ResultScatterGraph.tsx  Results.tsx  (+17 more)
frontend/tests/: Functions.test.tsx  ProjectList.test.tsx  projectSelector.test.tsx  setup.ts
internal/adr/: 001_frontend_backend_model_integration.md
(+111 files in other folders)
