[project]
name = "acidwatch-api"
version = "0.1.0"
description = "A backend service for AcidWatch"
authors = [{ name = "CCS Data & Digital", email = "fg_CCS_Data_Digital@equinor.com" }]
requires-python = ">=3.11, <3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "httpx",
    "pyjwt",
    "crypto",
    "python-dotenv",
    "msal",
    "azure-identity",
    "azure-cosmos",
    "azure-monitor-opentelemetry",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-fastapi",
    "solubilityccs",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[project.optional-dependencies]
pg = ["psycopg2-binary"]

[project.scripts]
acidwatch-api = "acidwatch_api.__main__:main"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
ruff = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
