[project]
name = "acidwatch-api"
version = "0.1.0"
description = "A backend service for AcidWatch"
requires-python = ">=3.12, <3.14"
authors = [
  { name = "CCS Data & Digital", email = "fg_CCS_Data_Digital@equinor.com" }
]
dependencies = [
  "alembic>=1.17.0,<2.0.0",
  "azure-monitor-opentelemetry",
  "crypto",
  "fastapi",
  "gunicorn>=23.0.0,<24.0.0",
  "httpx",
  "msal",
  "neqsim==3.1.0",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-instrumentation-httpx",
  "opentelemetry-sdk<=1.38",
  "pydantic-settings>=2.10.1,<3.0.0",
  "pyjwt",
  "python-dotenv",
  "requests",
  "solubilityccs",
  "sqlalchemy>=2.0.44,<3.0.0",
  "types-requests",
  "uvicorn",
  "uvicorn-worker>=0.4.0,<0.5.0",
]

[project.optional-dependencies]
docs = ["griffe-typingdoc", "mkdocs-material", "mkdocstrings[python]"]
pg = ["psycopg2-binary"]
notebook = ["jupyter"]

[dependency-groups]
dev = [
  "mypy",
  "pytest",
  "pytest-alembic>=0.12.1",
  "pytest-asyncio",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
exclude-newer = "1 week"
